<resources>
    <string name="app_name">AutoRun</string>
    <string name="note_name">Note Name</string>
    <string name="title_activity_menu">AutoRun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="set_note_color">Colour</string>
    <string name="set_note_beacons">Beacons</string>
    <string name="delete_note">Delete</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="color_1">Honey Suckle</string>
    <string name="color_2">Warm Gray</string>
    <string name="color_3">Putty</string>
    <string name="color_4">Faded Rose</string>
    <string name="color_5">Linen</string>
    <string name="color_6">Oyster</string>
    <string name="color_7">Biscotti</string>
    <string name="color_8">Hazelnut</string>
    <string name="select_none">Select None</string>
    <string name="settings">Settings</string>
    <string name="create_new_note">Add rule</string>
    <string name="view_all_beacons">All beacons</string>
    <string name="help">Help</string>
    <string name="about_app">About appPackage</string>
    <string name="feedback">Feedback</string>
    <string name="edit_note">Note Details</string>
    <string name="all_beacons">All beacons</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_new_message_notifications">Beacon notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enable_beacon_scanning">Enable beacon scanning</string>
    <string name="title1">Get all from your bluetooth</string>
    <string name="keep_it_on_to_get_reminded">Keep it on to get reminded</string>
    <string name="title2">Get notification bound to the beacons</string>
    <string name="title22">Never forget anything</string>
    <string name="desc1">Keeps your data safe</string>
    <string name="title11">Cloud limitless database</string>
    <string name="adjust_the_notes_to_your_mood">Adjust the notes to your mood</string>
    <string name="colorful">Colorful simple design</string>
    <string name="all_apps">All Apps</string>
    <string name="welcome">Welcome</string>
</resources>
