<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appPackage="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_note"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/create_new_note" />
        <item
            android:id="@+id/all_beacons"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/view_all_beacons" />
        <item
            android:id="@+id/all_apps"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/all_apps" />
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
