<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appPackage="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        appPackage:layout_constraintBottom_toTopOf="@+id/list_select_none"
        appPackage:layout_constraintEnd_toEndOf="parent"
        appPackage:layout_constraintStart_toStartOf="parent"
        appPackage:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/list_view_with_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            appPackage:layout_constraintBottom_toBottomOf="parent"
            appPackage:layout_constraintEnd_toEndOf="parent"
            appPackage:layout_constraintStart_toStartOf="parent"
            appPackage:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/list_select_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_none"
        appPackage:layout_constraintBottom_toTopOf="@+id/list_ok_button"
        appPackage:layout_constraintEnd_toEndOf="parent"
        appPackage:layout_constraintHorizontal_bias="1.0"
        appPackage:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_ok_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ok"
        appPackage:layout_constraintBottom_toBottomOf="parent"
        appPackage:layout_constraintEnd_toStartOf="@+id/list_cancel_button"
        appPackage:layout_constraintHorizontal_bias="0.0"
        appPackage:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_cancel_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        appPackage:layout_constraintBottom_toBottomOf="parent"
        appPackage:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>